k8s/overlays/dev/httproutes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: skill-advisor
  namespace: smp-agents
  labels:
    app.kubernetes.io/name: skill-advisor
spec:
  host: skill-advisor-smp-agents.apps.ocp.v7hjl.sandbox2288.opentlc.com
  to:
    kind: Service
    name: skill-advisor
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bundle-validator
  namespace: smp-agents
  labels:
    app.kubernetes.io/name: bundle-validator
spec:
  host: bundle-validator-smp-agents.apps.ocp.v7hjl.sandbox2288.opentlc.com
  to:
    kind: Service
    name: bundle-validator
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kg-qa
  namespace: smp-agents
  labels:
    app.kubernetes.io/name: kg-qa
spec:
  host: kg-qa-smp-agents.apps.ocp.v7hjl.sandbox2288.opentlc.com
  to:
    kind: Service
    name: kg-qa
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: playground
  namespace: smp-agents
  labels:
    app.kubernetes.io/name: playground
spec:
  host: playground-smp-agents.apps.ocp.v7hjl.sandbox2288.opentlc.com
  to:
    kind: Service
    name: playground
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: skill-builder
  namespace: smp-agents
  labels:
    app.kubernetes.io/name: skill-builder
spec:
  host: skill-builder-smp-agents.apps.ocp.v7hjl.sandbox2288.opentlc.com
  to:
    kind: Service
    name: skill-builder
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
